Fixed layout problem

--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
 #pimg {
     height: 40%;
     width: 40%;
+    display: block;
+    float: left;
 }
-h1, p {
+h1, h2, p, li {
     margin-left: 50%;
 }
